# esr

./: .env.local.example  .gitignore  .gitmodules  .ralph-loop-baseline  CHECKLIST.md  CLAUDE.md  Makefile  PHASE7_GAP.md  README.md  REVIEW_FOLLOWUPS.md  REVIEW_PHASE1.md  REVIEW_PHASE2.md  esr-cc.local.sh.example  esr-cc.sh  esr.sh  run-ralph.sh
.artifacts/: registry.json
.artifacts/bootstrap/: bootstrap-report.md  env-report.json  manifest.json  module-file-lists.json  test-baseline.json  verify-bootstrap-esr.sh
.claude/: hookify.pre-merge-dev-gate.local.md  settings.json
.githooks/: README.md  post-merge
adapters/cc_mcp/: esr.toml  pyproject.toml
adapters/cc_mcp/src/esr_cc_mcp/: __init__.py  channel.py  tools.py  ws_client.py
adapters/cc_mcp/tests/: test_channel_main.py  test_describe_topology_invoke.py  test_notification_inject.py  test_tools.py  test_tools_schema_language.py  test_url_resolution.py  test_ws_client.py
adapters/cc_tmux/: esr.toml  pyproject.toml
adapters/cc_tmux/src/esr_cc_tmux/: __init__.py  adapter.py
adapters/cc_tmux/tests/: test_capability.py  test_directives.py  test_env.py  test_events.py  test_factory_purity.py  test_io_permission.py  test_registration.py
adapters/feishu/: esr.toml  pyproject.toml
adapters/feishu/src/esr_feishu/: __init__.py  adapter.py  parsers.py
adapters/feishu/tests/: conftest.py  test_capability.py  test_client.py  test_directives.py  test_download.py  test_emit_events.py  test_envelope_principal.py  test_events.py  test_factory_purity.py  test_io_permission.py  test_lane_a.py  test_ratelimit.py  test_registration.py  test_workspaces_load_shapes.py
adapters/feishu/tests/fixtures/live-capture/: card_interaction.json  text_message.json  thread_reply.json
docs/: architecture.md  cli-reference.md  cookbook.md  dev-flow.md  dev-guide.md  ralph-loop-ledger.md  runtime-channel-reference.md
etc/: capabilities.yaml.example
handlers/cc_adapter_runner/: pyproject.toml
handlers/cc_adapter_runner/src/esr_handler_cc_adapter_runner/: __init__.py  on_msg.py  state.py
handlers/cc_adapter_runner/tests/: test_on_msg.py
handlers/feishu_app/: esr.toml  pyproject.toml
handlers/feishu_app/src/esr_handler_feishu_app/: __init__.py  on_msg.py  state.py
handlers/feishu_app/tests/: test_on_msg.py  test_state.py
handlers/tmux_proxy/: esr.toml  pyproject.toml
handlers/tmux_proxy/src/esr_handler_tmux_proxy/: __init__.py  on_msg.py  state.py
handlers/tmux_proxy/tests/: test_on_msg.py  test_state.py
patterns/: feishu-app-session.py  feishu-thread-session.py
py/: pyproject.toml
py/src/_adapter_common/: __init__.py  main.py  reconnect.py  runner_core.py  url.py
py/src/_ipc_common/: __init__.py  disconnect.py  frame.py  reconnect.py  url.py
py/src/_voice_common/: __init__.py  engine.py  jsonline.py
py/src/cc_adapter_runner/: __init__.py  __main__.py  _allowlist.py
py/src/esr/: __init__.py  actions.py  adapter.py  adapters.py  capabilities.py  command.py  events.py  handler.py  permissions.py  uri.py  workspaces.py
py/src/esr/cli/: __init__.py  admin.py  cap.py  daemon.py  main.py  notify.py  paths.py  reload.py  runtime_bridge.py  users.py
py/src/esr/cli/adapter/: __init__.py  feishu.py
py/src/esr/ipc/: __init__.py  adapter_runner.py  channel_client.py  channel_pusher.py  envelope.py  handler_worker.py  url.py
py/src/esr/verify/: __init__.py  capability.py  io_permission.py  purity.py
py/src/feishu_adapter_runner/: __init__.py  __main__.py  _allowlist.py
py/src/generic_adapter_runner/: __init__.py  __main__.py
py/src/voice_asr/: __init__.py  __main__.py
py/src/voice_e2e/: __init__.py  __main__.py
py/src/voice_tts/: __init__.py  __main__.py
py/tests/: conftest.py  test_actions.py  test_adapter.py  test_adapter_layout.py  test_adapter_loader.py  test_adapter_manifest.py  test_adapter_runner.py  test_adapter_runner_main.py  test_adapter_runner_run.py  test_capabilities.py  test_capability.py  test_channel_client.py  test_channel_client_call.py  test_channel_pusher.py  test_cli_actors.py  test_cli_adapter_add.py  test_cli_adapter_feishu.py  test_cli_admin_submit.py  test_cli_cap_read.py  test_cli_cap_write.py  test_cli_cmd_compile.py  test_cli_cmd_install.py  test_cli_cmd_restart.py  test_cli_cmd_run.py  test_cli_cmd_run_output_format.py  test_cli_cmd_show.py  test_cli_cmd_stop.py  test_cli_daemon.py  test_cli_deadletter.py  test_cli_debug.py  test_cli_drain.py  test_cli_error_ux.py  test_cli_install.py  test_cli_lint.py  test_cli_list.py  test_cli_notify.py  test_cli_offline.py  test_cli_paths.py  test_cli_reload.py  test_cli_scenario.py  (+41 more)
py/tests/adapter_runners/: test_cc_adapter_runner.py  test_dispatch_allowlist.py  test_feishu_adapter_runner.py  test_feishu_react.py  test_feishu_send_file.py  test_feishu_un_react.py  test_generic_adapter_runner.py  test_runner_core.py
py/tests/ipc_common/: test_disconnect.py  test_frame.py  test_package.py  test_reconnect.py  test_shim_removed.py  test_url.py
py/tests/scripts/: test_mock_feishu_envelope_shape.py  test_mock_feishu_membership.py  test_mock_feishu_multi_app.py  test_mock_feishu_teardown.py  test_mock_feishu_un_reactions.py  test_mock_feishu_ws_clients.py
py/tests/voice/: test_jsonline.py  test_voice_asr.py  test_voice_e2e.py  test_voice_tts.py
runtime/: .gitignore  README.md  mix.exs
scenarios/: e2e-esr-channel.yaml  e2e-feishu-cc.yaml
scripts/: cc-bootstrap.sh  e2e-cc.sh  esr-branch.sh  esr-cc.local.sh.example  esr-cc.sh  esrd-launchd.sh  esrd.sh  final_gate.sh  final_gate.sh.sha256  gen-docs.sh  gen_cli_reference.py  gen_runtime_channel_reference.py  kill_scenario_workers.sh  ledger_append.py  live_signatures.txt  loopguard-bundle.sha256  loopguard.sh  loopguard_scenario.py  loopguard_scenarios_allowlist.py  mock_cc.py  mock_cc_worker.py  mock_feishu.py  mock_mcp_ctl.py  promote-dev-to-main.sh  spawn_scenario_workers.sh  spawn_worker.sh  verify_cli_tests_live.py  verify_entry_bodies.py  verify_ledger_append_only.py  verify_prd_acceptance.py  verify_prd_matrix.py
tools/: esr-debug  wipe-esrd-home.sh  wipe-esrd-home_test.sh
(+1091 files in other folders)
