[project]
name = "esr"
version = "0.1.0"
description = "ESR v0.1 Python SDK + CLI"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ESR contributors" }
]
dependencies = [
    "pydantic>=2.5",
    "aiohttp>=3.9",
    "click>=8.1",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
esr = "esr.cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
]
