[project]
name = "esr"
version = "0.1.0"
description = "ESR v0.1 Python SDK + CLI"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ESR contributors" }
]
dependencies = [
    "pydantic>=2.5",
    "aiohttp>=3.9",
    "click>=8.1",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "ruamel.yaml>=0.18",
    "python-ulid>=3.0",
]

[project.scripts]
esr = "esr.cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# importlib import mode supports duplicate test-file basenames across
# different test directories (e.g. adapters/feishu/tests/test_registration.py
# and adapters/cc_tmux/tests/test_registration.py).
addopts = "--import-mode=importlib"
testpaths = [
    "tests",
    "tests/voice",
    "../adapters/feishu/tests",
    "../adapters/cc_tmux/tests",
    "../adapters/cc_mcp/tests",
    "../handlers/feishu_app/tests",
    "../handlers/feishu_thread/tests",
    "../handlers/tmux_proxy/tests",
    "../handlers/cc_session/tests",
]

[tool.uv.sources]
esr-adapter-feishu = { path = "../adapters/feishu", editable = true }
esr-adapter-cc-tmux = { path = "../adapters/cc_tmux", editable = true }
esr-handler-feishu-app = { path = "../handlers/feishu_app", editable = true }
esr-handler-feishu-thread = { path = "../handlers/feishu_thread", editable = true }
esr-handler-tmux-proxy = { path = "../handlers/tmux_proxy", editable = true }
esr-handler-cc-session = { path = "../handlers/cc_session", editable = true }
esr-cc-mcp = { path = "../adapters/cc_mcp", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-pyyaml>=6.0.12.20260408",
    "esr-adapter-feishu",
    "esr-adapter-cc-tmux",
    "esr-handler-feishu-app",
    "esr-handler-feishu-thread",
    "esr-handler-tmux-proxy",
    "esr-handler-cc-session",
    "esr-cc-mcp",
]
