[project]
name = "esr"
version = "0.1.0"
description = "ESR v0.1 Python SDK (sidecar IPC + adapter SDK)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ESR contributors" }
]
# 2026-05-06: `esr` click CLI deleted. Operator surface is the Elixir
# escript at `runtime/esr` + slash commands. The Python package is
# now scoped to: (1) sidecar IPC helpers (`esr.ipc.handler_worker`),
# (2) handler/adapter SDK decorators (`esr.handler`, `esr.adapter`),
# (3) workspace yaml + capabilities loaders consumed by the feishu
# adapter sidecar. `click` dependency dropped with the CLI.
dependencies = [
    "pydantic>=2.5",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "ruamel.yaml>=0.18",
    "python-ulid>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# importlib import mode supports duplicate test-file basenames across
# different test directories.
addopts = "--import-mode=importlib"
testpaths = [
    "tests",
    "tests/adapter_runners",
    "../adapters/feishu/tests",
    "../handlers/feishu_app/tests",
    "../handlers/feishu_thread/tests",
    "../handlers/cc_session/tests",
    "../handlers/cc_adapter_runner/tests",
]

[tool.uv.sources]
esr-adapter-feishu = { path = "../adapters/feishu", editable = true }
esr-handler-feishu-app = { path = "../handlers/feishu_app", editable = true }
esr-handler-feishu-thread = { path = "../handlers/feishu_thread", editable = true }
esr-handler-cc-session = { path = "../handlers/cc_session", editable = true }
esr-handler-cc-adapter-runner = { path = "../handlers/cc_adapter_runner", editable = true }
# PR-3.5 (2026-05-05): esr-cc-mcp source removed; the MCP server is
# now esrd-hosted. See docs/superpowers/specs/2026-05-05-pr-3-5-http-mcp-transport.md.

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-pyyaml>=6.0.12.20260408",
    "esr-adapter-feishu",
    "esr-handler-feishu-app",
    "esr-handler-feishu-thread",
    "esr-handler-cc-session",
    "esr-handler-cc-adapter-runner",
]
