[project]
name = "esr-cc-mcp"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "anyio>=4.0",
  "aiohttp>=3.9",
  "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esr_cc_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
