[project]
name = "esr-adapter-feishu"
version = "0.1.0"
description = "ESR v0.1 adapter for Feishu (lark_oapi)"
requires-python = ">=3.11"
dependencies = [
    "esr",
    "lark-oapi>=1.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
esr = { path = "../../py", editable = true }
