[project]
name = "esr-handler-cc-adapter-runner"
version = "0.1.0"
description = "ESR v0.2 placeholder handler for cc_adapter_runner actor_type (PR-9 T11a; real CC wire-up lands in T11b)"
requires-python = ">=3.11"
dependencies = ["esr"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
esr = { path = "../../py", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
